apps/nginx-demo/deployment.yaml
#deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: nginx-demo-ns
  labels:
    app.kubernetes.io/name: nginx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-demo
    spec:
      containers:
        - name: nginx-demo
          image: nginx:latest
          ports:
            - name: http
              containerPort: 80
