apps/nginx-demo/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-demo-ns
  annotions:
    metallb.universe.tf/loadBalancerIPs: "192.168.1.40"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
